K8S/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivebox-app
  namespace: hivebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hivebox-app
  template:
    metadata:
      labels:
        app: hivebox-app
    spec:
      containers:
        - name: hivebox-app
          image: ezzat22/hivebox-app:main
          ports:
            - containerPort: 3000
